# larmor-physx

./: LICENSE.txt  ProjectHome.md  README.md
BulletPhysics_patches/: README.txt  patch_BulletCollision_CMakeLists.txt  patch_CMakeLists.txt
LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/: LarmorVoronoi.h  LarmorVoronoi.vcxproj.filters  LarmorVoronoiCmd.cpp
LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/shatter/: CutterMesher.cpp  CutterMesher.h  DisjointMesh.cpp  MeshSimplification.cpp  SegmentsArrangement.h  SphereMesher.h  VolumeMesh.cpp
LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/util/: check_version.cpp  check_version.h
LarmorVoronoi_MayaPlugIn/builds/linux/: LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2012_lnx_kernel2.6.tgz  LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2012_lnx_kernel3.11.tgz  LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2013_lnx_kernel3.11.tgz
LarmorVoronoi_MayaPlugIn/builds/macosx/: LarmorVoronoiMayaPlugin_1.1.1Beta-Build78_2014_MacOSX.dmg
LarmorVoronoi_MayaPlugIn/doc/: LarmorVoronoiMayaPlugin.html
LarmorVoronoi_MayaPlugIn/extras/: LarmorVoronoiMayaPlugin_64bit.nsi
LarmorVoronoi_MayaPlugIn/mel_scripts/: LarmorVoronoiUI.mel  LarmorVoronoiUI_macosx.mel
src/: CMakeLists.txt  RevanoVX.cpp
src/core/: ConfigManager.cpp  ConfigManager.h  PhysicsCore.cpp  PhysicsCore.h  RibGenerator.cpp  RibGenerator.h  animation_viewer.cpp  animation_viewer.h  core_classes.cpp  core_classes.h  scenes_creation.cpp  scenes_creation.h
src/shatter/: Custom.h  CutterMesher.h  DelaunayVoronoi.cpp  DelaunayVoronoi.h  DisjointMesh.cpp  LinesEditor.cpp  LinesEditor.h  LinesViewer.h  MeshCheck.cpp  MeshViewer.h  MeshViewerAnim.cpp  SegmentsArrangement.cpp  SphereMesher.cpp  VolumeMesh.cpp  util.cpp
tags/1.0/BulletPhysics_patches/: patch_BulletCollision_CMakeLists.txt  patch_CMakeLists.txt
tags/1.0/LarmorVoronoi_MayaPlugIn/: MacOSX_and_Linux_src_readme.txt
tags/1.0/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/: CMakeLists.txt  LarmorVoronoi.vcxproj.filters
tags/1.0/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/shatter/: CutterMesher.cpp  CutterMesher.h  DelaunayVoronoi.cpp  DelaunayVoronoi.h  MeshCheck.cpp  MeshMassProperties.cpp  util.cpp
tags/1.0/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/util/: check_version.cpp
tags/1.0/LarmorVoronoi_MayaPlugIn/builds/linux/: LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2014_lnx_kernel2.6.tgz  LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2014_lnx_kernel3.11.tgz
tags/1.0/LarmorVoronoi_MayaPlugIn/mel_scripts/: LarmorVoronoiUI_linux.mel
tags/1.0/src/: CMakeLists.txt  README.txt  RevanoVX.cpp
tags/1.0/src/core/: ConfigManager.cpp  ConfigManager.h  PhysicsCore.cpp  RibGenerator.cpp  core_classes.h  scenes_creation.h
tags/1.0/src/shatter/: CutterMesher.h  DisjointMesh.cpp  LinesEditor.h  LinesViewer.cpp  LinesViewer.h  MeshCheck.cpp  MeshViewer.cpp  MeshViewerAnim.cpp  RejointMeshes.cpp  SegmentsArrangement.cpp  SphereMesher.cpp  util.cpp
trunk/: LICENSE.txt
trunk/BulletPhysics_patches/: README.txt  patch_btGImpactCollisionAlgorithm.cpp  patch_btGImpactCollisionAlgorithm.h
trunk/LarmorVoronoi_MayaPlugIn/VS2010_src/: LarmorVoronoi.sln
trunk/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/: LarmorVoronoi.h  LarmorVoronoi.vcxproj  LarmorVoronoiCmd.cpp
trunk/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/shatter/: Custom.h  CutterMesher.cpp  CutterMesher.h  DelaunayVoronoi.cpp  DelaunayVoronoi.h  DisjointMesh.cpp  MeshMassProperties.cpp  util.cpp  util.h
trunk/LarmorVoronoi_MayaPlugIn/VS2010_src/LarmorVoronoi/util/: check_version.cpp  check_version.h
trunk/LarmorVoronoi_MayaPlugIn/builds/linux/: LarmorVoronoiMayaPlugin_1.1.1Beta-Build79_2013_lnx_kernel2.6.tgz
trunk/LarmorVoronoi_MayaPlugIn/builds/macosx/: LarmorVoronoiMayaPlugin_1.1.1Beta-Build78_2012_MacOSX.dmg  LarmorVoronoiMayaPlugin_1.1.1Beta-Build78_2013_MacOSX.dmg
trunk/LarmorVoronoi_MayaPlugIn/doc/: LarmorVoronoiMayaPlugin.html
trunk/LarmorVoronoi_MayaPlugIn/extras/: LarmorVoronoiMayaPlugin_64bit.nsi
trunk/src/: RevanoVX.cpp
trunk/src/core/: CubicSpline.cpp  CubicSpline.h  PhysicsCore.cpp  PhysicsCore.h  PhysicsCore_shatter.cpp  RibGenerator.cpp  RibGenerator.h  animation_viewer.cpp  core_classes.cpp  core_classes.h  scenes_creation.cpp  scenes_creation.h
trunk/src/shatter/: CutterMesher.h  LinesViewer.cpp  MeshMassProperties.cpp  MeshSimplification.cpp  MeshViewer.cpp  MeshViewer.h  MeshViewerAnim.cpp  RejointMeshes.cpp  SegmentsArrangement.h  SphereMesher.h  VolumeMesh.cpp  util.h
